--- a/package.json
+++ b/package.json
@@ -8,21 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^3.8.4",
-    "expo": "^1.0.0",
-    "expo-av": "~10.1.3",
-    "expo-constants": "~12.1.3",
-    "expo-status-bar": "~1.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.3.4",
+    "expo": "^48.0.9",
+    "expo-av": "~13.2.1",
+    "expo-constants": "~14.2.1",
+    "expo-status-bar": "~1.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "^0.71.4",
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "^2.1.1",
     "react-native-paper": "^3.1.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-web": "^0.17.1",
+    "react-native-web": "^0.18.12",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
